# Atl

./: .gitignore  Atl.sln  Atl_Lib.sln  CMakeLists.txt  README.md  build.sh  premake5.lua
AnotherTestModule/: AnotherTestModule.vcxproj
AnotherTestModule/src/: MyTestClass.cpp
atl/: CMakeLists.txt
atl/atlCore/: CMakeLists.txt
atl/atlRunner/: CMakeLists.txt
atl/includes/: atl_includes.h
atl/src/: template.h
atl_lib/: atl_lib.vcxproj  atl_lib.vcxproj.filters
atl_lib/src/: atl_includes.h  pch.h  template.h
atl_lib_app/: Atl_app.vcxproj  atl_runner.vcxproj.filters
atl_lib_app/src/: MyTests.h  main.cpp
atl_lib_core/: Atl_core.vcxproj  Atl_core.vcxproj.filters
atl_runner/: atl_runner.vcxproj  atl_runner.vcxproj.filters
atl_runner/src/: MyTestRunner.cpp  MyTestRunner.h  main.cpp
bin-int/Debug-windows-Atl_app/: Atl_app.exe.recipe  vc143.idb
example/: CMakeLists.txt
example/allTestDefinitions/: CMakeLists.txt
example/app/: CMakeLists.txt
example/atlApp/: CMakeLists.txt
example/atlRunner/: CMakeLists.txt
example/someLib/: CMakeLists.txt
example/test/: CMakeLists.txt  test
example/test/allTestDefinitions/: CMakeLists.txt
example/test/allTestDefinitions/src/: AllTests.h
example/testRunner/: atlRunner
sample_project/: sample_project.vcxproj  sample_project.vcxproj.filters
sample_project/src/: MyClass.h
sample_project_test/: sample_project_test.vcxproj  sample_project_test.vcxproj.filters
sample_project_test/another_test_module/: AnotherTestModule.vcxproj  AnotherTestModule.vcxproj.filters
sample_project_test/src/: MyModule.cpp  (+6 more)
(+160 files in other folders)
